# mapping_comparison

./: CMakeLists.txt  README.md  package.xml
launch/: .env_gen_octomap_voxblox.launch.swp  .keyboard_mav.launch.swp  .voxblox_mav_gazebo.launch.swo  .voxblox_mav_gazebo.launch.swp  env_gen_octomap.launch  env_gen_octomap_voxblox.launch  env_gen_voxblox.launch  keyboard_mav.launch  octomap_vs_voxblox.launch  voxblox_mav_gazebo.launch
map/: MetroPCL1.pcd
rviz/: voxblox.rviz  voxblox_vs_octomap.rviz
src/: octomap2edf_main.cpp  pcd_to_pointcloud.cpp  vsf_mapping_comparison.cpp
